--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,26 @@
-<h1>{{title}}</h1>     
+<h1>{{title}}</h1>
+<h2>Transactions</h2>
+<table class='ledger-table'>
+    <thead>
+        <tr>
+            <td>Date</td>
+            <td>Description</td>
+            <td>Category</td>
+            <td>Type</td>
+            <td>Amount</td>
+            <td>Balance</td>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor='let t of transactions; let i = index;'>
+            <td><input [(ngModel)]="t.Date" placeholder="Date" /></td>
+            <td><input [(ngModel)]="t.Description" placeholder="Description" /></td>
+            <td><input [(ngModel)]="t.Category" placeholder="Category" /></td>
+            <td><input [(ngModel)]="t.Type" placeholder = "Type" /></td>
+            <td><input [(ngModel)]="t.Amount" placeholder="Amount" /></td>
+            <td *ngIf="i > 0">{{ transcations[$i - 1].Balance + t.Balance }}</td>
+            <td *ngIf="i == 0">{{ t.Amount }}</td>
+        </tr>
+    </tbody>
+</table>
 <router-outlet></router-outlet>
